Menu text align fix.

--- a/wp-content/themes/dhn/style.less
+++ b/wp-content/themes/dhn/style.less
@@ -312,6 +312,8 @@ ul.ul-buttons {
 
 						background: rgba(255, 255, 255, 0.98);
 
+						text-align: left;
+
 						list-style: none;
 
 						z-index: 100;
